 * #988: With the "max_duration" option or the "--max-duration" flag, run the archives and
   repository checks separately so they don't interfere with one another. Previously, borgmatic
   refused to run checks in this situation.
 * #989: Fix the log message code to avoid using Python 3.10+ logging features. Now borgmatic will
   work with Python 3.9 again.
 * Add support for Python 3.13.

1.9.9
 * #635: Log the repository path or label on every relevant log message, not just some logs.
 * #961: When the "encryption_passcommand" option is set, call the command once from borgmatic to
   collect the encryption passphrase and then pass it to Borg multiple times. See the documentation
   for more information: https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/
 * #981: Fix a "spot" check file count delta error.
 * #982: Fix for borgmatic "exclude_patterns" and "exclude_from" recursing into excluded
   subdirectories.
 * #983: Fix the Btrfs hook to support subvolumes with names like "@home" different from their
   mount points.
 * #985: Change the default value for the "--original-hostname" flag from "localhost" to no host
   specified. This way, the "restore" action works without a hostname if there's a single matching
   database dump.

1.9.8
 * #979: Fix root patterns so they don't have an invalid "sh:" prefix before getting passed to Borg.
 * Expand the recent contributors documentation section to include ticket submitters—not just code
   contributors—because there are multiple ways to contribute to the project! See:
   https://torsion.org/borgmatic/#recent-contributors

1.9.7
 * #855: Add a Sentry monitoring hook. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#sentry-hook
 * #968: Fix for a "spot" check error when a filename in the most recent archive contains a newline.
 * #970: Fix for an error when there's a blank line in the configured patterns or excludes.