@@ -1,10 +1,6 @@
-import functools
 import logging
 import os
 import re
-
-import borgmatic.config.paths
-import borgmatic.execute
 
 logger = logging.getLogger(__name__)
 
@@ -15,7 +11,7 @@ CREDENTIAL_NAME_PATTERN = re.compile(r'^\w+$')
 def load_credential(hook_config, config, credential_name):
     '''
     Given the hook configuration dict, the configuration dict, and a credential name to load, read
-    the credential from the corresonding systemd credential file and return it.
+    the credential from the corresponding systemd credential file and return it.
 
     Raise ValueError if the systemd CREDENTIALS_DIRECTORY environment variable is not set, the
     credential name is invalid, or the credential file cannot be read.
